6.57_01
    Improvements
    * parse_abstract() is more robust supporting "Package.pm" and multiple
      dashes and spaces. [rt.perl.org 74438]

    Bug Fixes
    * Recognize .so files in AIX. [rt.cpan.org 41360] (Jens Rehsack)
    * Remove manual image-base generation on Win32/gcc [rt.cpan.org 47138]
      (Yasuhiro Matsumoto)

    Test Fixes
    * Guard against old versions of YAML::Tiny that worked differently.
      [rt.cpan.org 55500]


6.56  Thu Dec 17 14:02:14 PST 2009
    * Stable release of 6.55_03


6.55_03  Fri Dec  4 23:08:02 PDT 2009 
    Bug Fixes
    * BUILD_REQUIRES will not be used when generating ppd, PRINT_PREREQ and
    'requires' section of META.yml (Alexandr Ciornii)

    OS/2
    * Better compatibility with miniperl [rt.cpan.org 48534] (Ilya Zakharevich)

    Win32
    * mingw64 support (Sisyphus)
    * Fixed a typo causing bad Makefiles for Visual C++ users (Steve Hay)

    New Features
    * The new "package NAME VERSION" syntax from 5.11 is now supported by
      parse_version() and thus VERSION_FROM.  The first version declaration,
      package or $VERSION, is used. (David Golden)


6.55_02  Wed Aug  5 00:36:36 PDT 2009
    Feature Changes
    * PREFIX now applies to relative directories.  This is a change since
      6.20 when they were ignored.  Its necessary for relocatable Perls.

    VMS
    * Refactoring of "MakeMaker Parameters" section in 6.55_01 broke VMS.
      (Craig Berry)


6.55_01  Tue Jul 14 15:53:30 PDT 2009
    Test Fixes
    * The tests got a bit overzealous and removed the LIB environment variable
      while is necessary for some compilers to work. [rt.cpan.org 47722]
      (Jan Dubois)
    * Another fix for arch_check() on Windows changing how we normalize
      long and short filenames. [rt.cpan.org 47723] (Jan Dubois)

    New Features
    * BUILD_REQUIRES is added, similar to PREREQ_PM but for modules which
      are necessary to build, but not run, your module. (Alexandr Ciornii)

