@@ -7,6 +7,7 @@
     * Recognize .so files in AIX. [rt.cpan.org 41360] (Jens Rehsack)
     * Remove manual image-base generation on Win32/gcc [rt.cpan.org 47138]
       (Yasuhiro Matsumoto)
+    * Use the bundled versions of our dependencies if they're not installed.
 
     Test Fixes
     * Guard against old versions of YAML::Tiny that worked differently.
